# riskope

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
data/taxonomy.lancedb/taxonomy_58045f303100ec92.lance/_transactions/: 0-8610427d-ab7d-4e70-ba40-29d2ddbd669e.txn
data/taxonomy.lancedb/taxonomy_c1a8a1043f3edce7.lance/_transactions/: 0-48a1a941-ae70-4f99-a379-83562146d9ab.txn
docs/: massive_risk_categories.md  massive_risk_categories_kr.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
reports/: evaluation_report.md
src/riskope/: __init__.py  cli.py  config.py  models.py  tracing.py
src/riskope/api/: app.py  schemas.py  service.py
src/riskope/api/db/: models.py  session.py
src/riskope/api/routers/: companies.py  corp_search.py  jobs.py  (+1 more)
src/riskope/clustering/: validator.py
src/riskope/dart/: client.py  corp_index.py
src/riskope/evaluation/: evaluator.py  metrics.py
src/riskope/pipeline/: chunker.py  dedup.py  extractor.py  judge.py  mapper.py  orchestrator.py  refiner.py  sec_orchestrator.py
src/riskope/sec/: client.py
src/riskope/storage/: s3.py
src/riskope/taxonomy/: kr_labels.py  loader.py
tests/: conftest.py  test_api_service.py  test_chunker.py  test_clustering.py  test_dart_parser.py  test_dedup.py  test_en_pipeline.py  test_evaluation.py  test_extractor_retry.py  test_mapper.py  test_models.py  test_refiner.py  test_sec_client.py  test_taxonomy_loader.py
(+5 files in other folders)
