[project]
name = "riskope"
version = "0.1.0"
description = "DART 공시 기반 택소노미 정렬 리스크 팩터 추출 엔진"
readme = "README.md"
authors = [
    { name = "sangyun628", email = "sangyun@cleave.work" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.82.0",
    "google-genai>=1.14.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "markdownify>=0.14.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "numpy>=2.2.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "lancedb>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "boto3>=1.36.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
riskope = "riskope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["riskope"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
